--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
-		"@types/aos": "^3.0.7",
 		"aos": "^2.3.4",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -37,5 +36,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"framer-motion": "^12.12.2"
 	}
 }
