--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.34.1",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"surrealdb": "^1.3.2"
 	}
 }
