--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.3.0",
 		"@eslint/js": "^9.29.0",
-		"@lucide/svelte": "^0.516.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@lucide/svelte": "^0.522.0",
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
@@ -27,19 +27,17 @@
 		"aos": "^2.3.4",
 		"eslint": "^9.29.0",
 		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.9.2",
+		"eslint-plugin-svelte": "^3.9.3",
 		"globals": "^16.0.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"svelte": "^5.34.3",
-		"svelte-check": "^4.0.0",
+		"prettier-plugin-tailwindcss": "^0.6.13",
+		"surrealdb": "^1.3.2",
+		"svelte": "^5.34.7",
+		"svelte-check": "^4.2.2",
 		"tailwindcss": "^4.1.10",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.34.1",
 		"vite": "^6.2.6"
-	},
-	"dependencies": {
-		"surrealdb": "^1.3.2"
 	}
 }
