--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.3.0",
-		"@eslint/js": "^9.29.0",
-		"@lucide/svelte": "^0.523.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.22.0",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@eslint/compat": "1.3.1",
+		"@eslint/js": "9.31.0",
+		"@lucide/svelte": "0.525.0",
+		"@sveltejs/adapter-node": "5.2.13",
+		"@sveltejs/kit": "2.24.0",
+		"@sveltejs/vite-plugin-svelte": "6.1.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.1.10",
+		"@tailwindcss/vite": "4.1.11",
 		"@types/aos": "^3.0.7",
 		"aos": "^2.3.4",
-		"eslint": "^9.29.0",
+		"eslint": "9.31.0",
 		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.9.3",
-		"globals": "^16.0.0",
-		"prettier": "^3.6.0",
+		"eslint-plugin-svelte": "3.10.1",
+		"globals": "16.3.0",
+		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.13",
+		"prettier-plugin-tailwindcss": "0.6.14",
 		"surrealdb": "^1.3.2",
-		"svelte": "^5.34.7",
+		"svelte": "5.36.2",
 		"svelte-check": "^4.2.2",
-		"tailwindcss": "^4.1.10",
+		"tailwindcss": "4.1.11",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.35.0",
-		"vite": "^7.0.0"
+		"typescript-eslint": "8.37.0",
+		"vite": "7.0.4"
 	}
 }
