--- a/package.json
+++ b/package.json
@@ -39,5 +39,182 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.35.0",
 		"vite": "^7.0.0"
-	}
+	},
+	"description": "",
+	"main": "eslint.config.js",
+	"dependencies": {
+		"acorn": "^8.15.0",
+		"acorn-jsx": "^5.3.2",
+		"ajv": "^6.12.6",
+		"ansi-styles": "^4.3.0",
+		"argparse": "^2.0.1",
+		"aria-query": "^5.3.2",
+		"axios": "^1.11.0",
+		"axobject-query": "^4.1.0",
+		"balanced-match": "^1.0.2",
+		"brace-expansion": "^1.1.12",
+		"braces": "^3.0.3",
+		"buffer-from": "^1.1.2",
+		"callsites": "^3.1.0",
+		"chalk": "^4.1.2",
+		"chokidar": "^4.0.3",
+		"chownr": "^3.0.0",
+		"classlist-polyfill": "^1.2.0",
+		"clsx": "^2.1.1",
+		"color-convert": "^2.0.1",
+		"color-name": "^1.1.4",
+		"commander": "^2.20.3",
+		"commondir": "^1.0.1",
+		"concat-map": "^0.0.1",
+		"cookie": "^0.6.0",
+		"cors": "^2.8.5",
+		"cross-spawn": "^7.0.6",
+		"cssesc": "^3.0.0",
+		"debug": "^4.4.1",
+		"deep-is": "^0.1.4",
+		"deepmerge": "^4.3.1",
+		"detect-libc": "^2.0.4",
+		"devalue": "^5.1.1",
+		"enhanced-resolve": "^5.18.1",
+		"esbuild": "^0.25.4",
+		"escape-string-regexp": "^4.0.0",
+		"eslint-scope": "^8.4.0",
+		"eslint-visitor-keys": "^4.2.1",
+		"esm-env": "^1.2.2",
+		"espree": "^10.4.0",
+		"esquery": "^1.6.0",
+		"esrap": "^1.4.9",
+		"esrecurse": "^4.3.0",
+		"estraverse": "^5.3.0",
+		"estree-walker": "^2.0.2",
+		"esutils": "^2.0.3",
+		"express": "^5.1.0",
+		"fast-deep-equal": "^3.1.3",
+		"fast-glob": "^3.3.3",
+		"fast-json-stable-stringify": "^2.1.0",
+		"fast-levenshtein": "^2.0.6",
+		"fastq": "^1.19.1",
+		"fdir": "^6.4.6",
+		"file-entry-cache": "^8.0.0",
+		"fill-range": "^7.1.1",
+		"find-up": "^5.0.0",
+		"flat-cache": "^4.0.1",
+		"flatted": "^3.3.3",
+		"function-bind": "^1.1.2",
+		"glob-parent": "^6.0.2",
+		"graceful-fs": "^4.2.11",
+		"graphemer": "^1.4.0",
+		"has-flag": "^4.0.0",
+		"hasown": "^2.0.2",
+		"ignore": "^5.3.2",
+		"import-fresh": "^3.3.1",
+		"imurmurhash": "^0.1.4",
+		"is-core-module": "^2.16.1",
+		"is-extglob": "^2.1.1",
+		"is-glob": "^4.0.3",
+		"is-module": "^1.0.0",
+		"is-number": "^7.0.0",
+		"is-reference": "^3.0.3",
+		"isexe": "^2.0.0",
+		"isows": "^1.0.7",
+		"jiti": "^2.4.2",
+		"js-yaml": "^4.1.0",
+		"json-buffer": "^3.0.1",
+		"json-schema-traverse": "^0.4.1",
+		"json-stable-stringify-without-jsonify": "^1.0.1",
+		"keyv": "^4.5.4",
+		"kleur": "^4.1.5",
+		"known-css-properties": "^0.37.0",
+		"levn": "^0.4.1",
+		"lightningcss": "^1.30.1",
+		"lightningcss-win32-x64-msvc": "^1.30.1",
+		"lilconfig": "^2.1.0",
+		"locate-character": "^3.0.0",
+		"locate-path": "^6.0.0",
+		"lodash.castarray": "^4.4.0",
+		"lodash.debounce": "^4.0.8",
+		"lodash.isplainobject": "^4.0.6",
+		"lodash.merge": "^4.6.2",
+		"lodash.throttle": "^4.1.1",
+		"magic-string": "^0.30.17",
+		"merge2": "^1.4.1",
+		"micromatch": "^4.0.8",
+		"mini-svg-data-uri": "^1.4.4",
+		"minimatch": "^3.1.2",
+		"minipass": "^7.1.2",
+		"minizlib": "^3.0.2",
+		"mkdirp": "^3.0.1",
+		"mri": "^1.2.0",
+		"mrmime": "^2.0.1",
+		"ms": "^2.1.3",
+		"nanoid": "^3.3.11",
+		"natural-compare": "^1.4.0",
+		"optionator": "^0.9.4",
+		"p-limit": "^3.1.0",
+		"p-locate": "^5.0.0",
+		"parent-module": "^1.0.1",
+		"path-exists": "^4.0.0",
+		"path-key": "^3.1.1",
+		"path-parse": "^1.0.7",
+		"picocolors": "^1.1.1",
+		"picomatch": "^4.0.2",
+		"postcss": "^8.5.6",
+		"postcss-load-config": "^3.1.4",
+		"postcss-safe-parser": "^7.0.1",
+		"postcss-scss": "^4.0.9",
+		"postcss-selector-parser": "^6.0.10",
+		"prelude-ls": "^1.2.1",
+		"punycode": "^2.3.1",
+		"queue-microtask": "^1.2.3",
+		"readdirp": "^4.1.2",
+		"resolve": "^1.22.10",
+		"resolve-from": "^4.0.0",
+		"reusify": "^1.1.0",
+		"rollup": "^4.41.1",
+		"run-parallel": "^1.2.0",
+		"sade": "^1.8.1",
+		"semver": "^7.7.2",
+		"set-cookie-parser": "^2.7.1",
+		"shebang-command": "^2.0.0",
+		"shebang-regex": "^3.0.0",
+		"sirv": "^3.0.1",
+		"source-map-js": "^1.2.1",
+		"source-map-support": "^0.5.21",
+		"strip-json-comments": "^3.1.1",
+		"supports-color": "^7.2.0",
+		"supports-preserve-symlinks-flag": "^1.0.0",
+		"svelte-eslint-parser": "^1.2.0",
+		"tapable": "^2.2.2",
+		"tar": "^7.4.3",
+		"terser": "^5.43.1",
+		"tinyglobby": "^0.2.14",
+		"to-regex-range": "^5.0.1",
+		"totalist": "^3.0.1",
+		"ts-api-utils": "^2.1.0",
+		"tslib": "^2.8.1",
+		"type-check": "^0.4.0",
+		"undici-types": "^7.8.0",
+		"uri-js": "^4.4.1",
+		"util-deprecate": "^1.0.2",
+		"uuidv7": "^1.0.2",
+		"vitefu": "^1.0.7",
+		"which": "^2.0.2",
+		"word-wrap": "^1.2.5",
+		"ws": "^8.18.2",
+		"yallist": "^5.0.0",
+		"yaml": "^2.8.0",
+		"yocto-queue": "^0.1.0",
+		"zimmerframe": "^1.1.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nudel96/priceactiontalk-landing.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/nudel96/priceactiontalk-landing/issues"
+	},
+	"homepage": "https://github.com/nudel96/priceactiontalk-landing#readme"
 }
