--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"axios": "^1.11.0",
 		"axobject-query": "^4.1.0",
 		"balanced-match": "^1.0.2",
+		"better-sqlite3": "^12.2.0",
 		"brace-expansion": "^1.1.12",
 		"braces": "^3.0.3",
 		"buffer-from": "^1.1.2",
@@ -75,6 +76,7 @@
 		"deepmerge": "^4.3.1",
 		"detect-libc": "^2.0.4",
 		"devalue": "^5.1.1",
+		"dotenv": "^17.2.1",
 		"enhanced-resolve": "^5.18.1",
 		"esbuild": "^0.25.4",
 		"escape-string-regexp": "^4.0.0",
@@ -128,6 +130,7 @@
 		"levn": "^0.4.1",
 		"lightningcss": "^1.30.1",
 		"lightningcss-win32-x64-msvc": "^1.30.1",
+		"lightweight-charts": "^5.0.8",
 		"lilconfig": "^2.1.0",
 		"locate-character": "^3.0.0",
 		"locate-path": "^6.0.0",
